--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="CV of Andrew Karev" />
-  <title>CV</title>
+  <title>Andrew Karev - Front-end developer</title>
 </head>
 
 <body>
