--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Andrew Karev CV" />
+    <meta property="og:title" content="Andrew Karev - Front-end developer" />
+    <meta property="og:site_name" content="Andrew Karev CV" />
+    <meta property="og:url" content="https://andrewkarev-cv.netlify.app/" />
+    <meta property="og:description" content="Junior Front-end engineer CV." />
+    <meta property="og:image" content="%PUBLIC_URL%/favicon.ico" />
+    <title>Andrew Karev - Front-end developer</title>
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="CV of Andrew Karev" />
-  <title>Andrew Karev - Front-end developer</title>
-</head>
-
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-</body>
-
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
 </html>
